--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "next": "14.2.8",
     "react": "^19.0.0-rc-a03254bc-20240905",
     "react-dom": "^19.0.0-rc-a03254bc-20240905",
+    "sweetalert2": "^11.14.0",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
