--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,8 @@
 PORT = 5000
 SECRET_JWT_KEY = '' # Add your secret key here
 FRONTEND_URL = 'http://localhost:3000'
+MYSQL_HOST = 'localhost'
+MYSQL_USER = 'root'
+MYSQL_PASSWORD = ''
+MYSQL_DATABASE = 'inv-web'
+MYSQL_PORT = 3306
