--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.0",
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
