--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.8",
     "react": "^19.0.0-rc-f2df5694-20240916",
     "react-dom": "^19.0.0-rc-f2df5694-20240916",
+    "react-webcam": "^7.2.0",
     "sweetalert2": "^11.14.0",
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^2.5.2",
