--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.8",
     "react": "^19.0.0-rc-f2df5694-20240916",
     "react-dom": "^19.0.0-rc-f2df5694-20240916",
+    "react-icons": "^5.3.0",
     "react-webcam": "^7.2.0",
     "rut-chile": "^1.0.2",
     "sweetalert2": "^11.14.0",
