--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 PORT = 5000
 SECRET_JWT_KEY = '' # Add your secret key here
 FRONTEND_URL = 'http://localhost:3000'
+NODE_ENV = 'development' # cambiar a 'production' en producción
 DB_HOST = 'localhost'
 DB_USER = 'postgres'
 DB_PASSWORD = ''
