--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.0",
     "rut-chile": "^1.0.2",
     "sequelize": "^6.37.3",
