--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,31 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.438.0",
-    "next": "^14.2.14",
-    "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
+    "next": "14.2.8",
+    "react": "^19.0.0-rc-f2df5694-20240916",
+    "react-dom": "^19.0.0-rc-f2df5694-20240916",
     "react-icons": "^5.3.0",
     "react-webcam": "^7.2.0",
     "rut-chile": "^1.0.2",
-    "shadcn-ui": "^0.2.3",
-    "sweetalert2": "^11.6.13",
+    "sweetalert2": "^11.14.0",
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
