--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,13 +36,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.3.6",
+    "@types/node": "20.17.10",
+    "@types/react": "18.3.18",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.7.2"
   }
 }
